Fix elements aligns

--- a/src/assets/style/basic/base.scss
+++ b/src/assets/style/basic/base.scss
@@ -45,4 +45,5 @@ button,
 .statistic {
   height: 450px;
   width: 450px;
+  margin: auto;
 }
